tests/baselines/reference/unusedLocalsOnFunctionExpressionWithinFunctionDeclaration1.errors.txt
tests/cases/compiler/unusedLocalsOnFunctionExpressionWithinFunctionDeclaration1.ts(2,18): error TS6133: Parameter 'person' has never been used.
tests/cases/compiler/unusedLocalsOnFunctionExpressionWithinFunctionDeclaration1.ts(3,9): error TS6132: Variable 'unused' has never been used.
tests/cases/compiler/unusedLocalsOnFunctionExpressionWithinFunctionDeclaration1.ts(4,9): error TS6132: Variable 'maker' has never been used.
tests/cases/compiler/unusedLocalsOnFunctionExpressionWithinFunctionDeclaration1.ts(4,27): error TS6133: Parameter 'child' has never been used.
tests/cases/compiler/unusedLocalsOnFunctionExpressionWithinFunctionDeclaration1.ts(5,13): error TS6132: Variable 'unused2' has never been used.


==== tests/cases/compiler/unusedLocalsOnFunctionExpressionWithinFunctionDeclaration1.ts (5 errors) ====
    
    function greeter(person: string, person2: string) {
                     ~~~~~~~~~~~~~~
!!! error TS6133: Parameter 'person' has never been used.
        var unused = 20;
            ~~~~~~
!!! error TS6132: Variable 'unused' has never been used.
        var maker = function (child: string): void {
            ~~~~~
!!! error TS6132: Variable 'maker' has never been used.
                              ~~~~~~~~~~~~~
!!! error TS6133: Parameter 'child' has never been used.
            var unused2 = 22;
                ~~~~~~~
!!! error TS6132: Variable 'unused2' has never been used.
        }
        person2 = "dummy value";
    }